
---------------------------------------------------------------------
-- 0.2 Release --

- Add API support for graph block, if/else, and repeat statements

- Update copyright notices for API and implementation

- Add class library support for Bind

- Add class library support for inline exec method

- Add class library support for action export

- Add class library support for state struct

---------------------------------------------------------------------
-- 0.1 Release --

- Initial release