@@ -1,0 +1,5 @@
+
++TESTEXE=classlib_inline_exec_1
++USE_CXX11=true
+
+
