@@ -1,0 +1,5 @@
+
++TESTEXE=classlib_native_exec_1
++USE_CXX11=true
+
+
