@@ -14,6 +14,10 @@
 
 - Add class library support for state struct
 
+- Refactor class library for enhanced support of native exec blocks
+
+- Add basic mechanism for inline exec (hook class method)
+
 ---------------------------------------------------------------------
 -- 0.1 Release --
 
